--- a/templates/courier/index.html
+++ b/templates/courier/index.html
@@ -1,50 +1,21 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+{% extends 'base_login.html' %}
 
-    <link rel="stylesheet" href="/templates/css/reset.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/templates/css/main.css" />
-    <link rel="stylesheet" href="/templates/css/header.css" />
-    <link rel="stylesheet" href="/templates/css/courier.css" />
-    <link rel="stylesheet" href="/templates/css/manager.css" />
-    <title>goodTravel</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header__logo">
-          <img src="/templates/img/layer1.svg" alt="logo" srcset="" />
-        </div>
-        <div class="header__empty"></div>
-        <nav class="header__nav">
-          <ul class="nav__ul">
-            <li class="nav__li">
-              <a href="#" class="logout nav__a">Выйти</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="container">
+{% from 'admin/admin-header.html' import admin_logo, admin_nav %}
+
+      {% block styles %}
+    <link rel="stylesheet" href=" {{ url_for('static', filename='css/courier.css') }} " />
+    <link rel="stylesheet" href=" {{ url_for('static', filename='css/manager.css') }} " />
+      {% endblock %}
+
+{% block logo %}
+    {{ admin_logo() }}
+{% endblock %}
+
+{% block nav %}
+	{{ admin_nav() }}
+{% endblock %}
+
+{% block content %}
         <div class="orders">
           <div class="active-orders">
             <h2>Доставка в работе</h2>
@@ -105,7 +76,4 @@
             </div>
           </div>
         </div>
-      </div>
-    </main>
-  </body>
-</html>
+{% endblock %}
