--- a/templates/good_page.html
+++ b/templates/good_page.html
@@ -1,91 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+{% extends 'base_login.html' %}
 
-    <link rel="stylesheet" href="css/reset.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/header.css" />
+{% from 'admin/admin-header.html' import admin_logo %}
 
-    <link rel="stylesheet" href="./css/info-page.css" />
-    <title>goodTravel</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header__logo">
-          <img src="./img/layer1.svg" alt="logo" srcset="" />
-        </div>
-        <div class="header__empty"></div>
-        <nav class="header__nav">
-          <ul class="nav__ul">
-            <li class="nav__li"><i class="bi bi-cart4"></i></li>
-            <li class="nav__li"></li>
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/info-page.css') }}"/>
+{% endblock %}
+{% block logo %}
+    {{ admin_logo() }}
+{% endblock %}
+
+{% block nav %}
+    <nav class="header__nav">
+        <ul class="nav__ul">
+            <li class="nav__li"><i class="cart bi bi-cart4"></i></li>
             <li class="nav__li">
-              <a href="#" class="logout nav__a">Выйти</a>
+                <a href="#" class="logout nav__a">Выйти</a>
             </li>
-            <li class="nav__li"></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="container">
-        <div class="good-info">
-          <div class="good-info-image">
-            <img src="./img/fila.jpg" alt="" />
-          </div>
-          <div class="good-info-decription">
+        </ul>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="good-info">
+        <div class="good-info-image">
+            <img src="./img/fila.jpg" alt=""/>
+        </div>
+        <div class="good-info-decription">
             <h2>Филадельфия</h2>
             <div class="price">450</div>
             <div class="description">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Excepturi, perspiciatis animi, quia dicta soluta cupiditate
-              voluptatem doloremque consequatur quas obcaecati quo cumque sed
-              doloribus. Rerum nemo sint perspiciatis non! Id.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Excepturi, perspiciatis animi, quia dicta soluta cupiditate
+                voluptatem doloremque consequatur quas obcaecati quo cumque sed
+                doloribus. Rerum nemo sint perspiciatis non! Id.
             </div>
-          </div>
-          <div class="ingridients">
-            <ul>
-              <li>
-                <input type="checkbox" name="losos" id="losos" />
-                <label for="losos">Больше рыбки </label>
-                  <span class="add-price">+ 30</span>
-              </li>
-              <li>
-                <input type="checkbox" name="losos" id="losos" />
-                <label for="losos" >Больше рыбки </label>
-                <span class="add-price">+ 30</span>
-              </li>
-              <li>
-                <input type="checkbox" name="losos" id="losos" />
-                <label for="losos">Больше рыбки </label>
-                <span class="add-price">+ 30</span>
-              </li>
-            </ul>
-          </div>
-          <div class="make-order">
-            <button>Сделать заказ</button>
-          </div>
         </div>
-      </div>
-    </main>
-  </body>
-</html>
+        <div class="ingridients">
+            <ul>
+                <li>
+                    <input type="checkbox" name="losos" id="losos"/>
+                    <label for="losos">Больше рыбки </label>
+                    <span class="add-price">+ 30</span>
+                </li>
+                <li>
+                    <input type="checkbox" name="losos" id="losos"/>
+                    <label for="losos">Больше рыбки </label>
+                    <span class="add-price">+ 30</span>
+                </li>
+                <li>
+                    <input type="checkbox" name="losos" id="losos"/>
+                    <label for="losos">Больше рыбки </label>
+                    <span class="add-price">+ 30</span>
+                </li>
+            </ul>
+        </div>
+        <div class="make-order">
+            <button>Сделать заказ</button>
+        </div>
+    </div>
+{% endblock %}
