--- a/templates/index.html
+++ b/templates/index.html
@@ -1,158 +1,41 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+{% extends 'base_login.html' %}
 
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="css/good-cards.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/header.css" />
+{% from 'admin/admin-header.html' import admin_logo %}
 
-    <title>goodTravel</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header__logo">
-          <img src="./img/layer1.svg" alt="logo" srcset="" />
-        </div>
-        <nav class="header__nav">
-          <ul class="nav__ul">
+{% block logo %}
+    {{ admin_logo() }}
+{% endblock %}
+
+{% block nav %}
+    <nav class="header__nav">
+        <ul class="nav__ul">
             <li class="nav__li"><i class="cart bi bi-cart4"></i></li>
-            <!-- <li class="nav__li"></li> -->
             <li class="nav__li">
-              <a href="#" class="logout nav__a">Выйти</a>
+                <a href="#" class="logout nav__a">Выйти</a>
             </li>
-            <!-- <li class="nav__li"></li> -->
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="container">
-        <div class="good-cards">
-          <div class="good-card">
+        </ul>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="good-cards">
+    {% for good in goods %}
+        <div class="good-card">
             <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
+                <img src="{{ good.photo_URL }}" alt="Филадельфия"/>
             </div>
             <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
+                <div class="name">
+                    <h1>{{ good.title }}</h1>
+                </div>
 
-              <div class="price">450</div>
+                <div class="price">{{ good.price }}</div>
             </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
-
-          <div class="good-card">
-            <div class="good-card-image">
-              <img src="./img/fila.jpg" alt="Филадельфия" />
-            </div>
-            <div class="good-card-description">
-              <div class="name">
-                <h1>Филадельфия</h1>
-              </div>
-              <div class="price">450</div>
-            </div>
-          </div>
         </div>
-      </div>
-    </main>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+    {% endfor %}
+    </div>
+{% endblock %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  </body>
-</html>
+{% block script %}
+    <script src="{{ url_for('static', filename='js/user-index.js') }}"></script>
+{% endblock %}
