--- a/templates/kitchen/index.html
+++ b/templates/kitchen/index.html
@@ -1,132 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+{% extends 'base_login.html' %}
 
-    <link rel="stylesheet" href="/templates/css/reset.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/templates/css/main.css" />
-    <link rel="stylesheet" href="/templates/css/header.css" />
-    <link rel="stylesheet" href="/templates/css/kichen.css" />
+{% from 'admin/admin-header.html' import admin_logo, admin_nav %}
 
-    <title>goodTravel</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header__logo">
-          <img src="/templates/img/layer1.svg" alt="logo" srcset="" />
-        </div>
-        <div class="header__empty"></div>
-        <nav class="header__nav">
-          <ul class="nav__ul">
-            <li class="nav__li">
-              <a href="#" class="logout nav__a">Выйти</a>
-            </li>
-          </ul>
-        </nav>
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', 'css/kitchen.css') }}" />
+{% endblock %}
+
+{% block logo %}
+    {{ admin_logo() }}
+{% endblock %}
+
+{% block nav %}
+	{{ admin_nav() }}
+{% endblock %}
+
+{% block content %}
+    <div class="orders-group row row-cols-3 justify-content-center">
+      <div class="orders wait-work">
+        <h2>Ожидание</h2>
+        <ul class="orders-list">
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input
+              class="button-small"
+              type="button"
+              value="Взять в работу"
+            />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Взять в работу" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Взять в работу" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Взять в работу" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Взять в работу" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Взять в работу" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Взять в работу" />
+          </li>
+        </ul>
       </div>
-    </header>
-    <main>
-      <div class="container">
-        <div class="orders-group row row-cols-3 justify-content-center">
-          <div class="orders wait-work">
-            <h2>Ожидание</h2>
-            <ul class="orders-list">
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input
-                  class="button-small"
-                  type="button"
-                  value="Взять в работу"
-                />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Взять в работу" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Взять в работу" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Взять в работу" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Взять в работу" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Взять в работу" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Взять в работу" />
-              </li>
-            </ul>
-          </div>
-          <div class="in-progress">
-            <h2>В работе</h2>
-            <ul class="orders-list">
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Приготовлено" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Приготовлено" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Приготовлено" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Приготовлено" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Приготовлено" />
-              </li>
-            </ul>
-          </div>
-          <div class="wait-courier">
-            <h2>Ожидают курьера</h2>
-            <ul class="orders-list">
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Забрано курьером" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Забрано курьером" />
-              </li>
-              <li class="orders-item row row-cols-2">
-                <a href="order-data">Заказ №304</a>
-                <input class="button-small" value="Забрано курьером" />
-              </li>
-            </ul>
-          </div>
-        </div>
+      <div class="in-progress">
+        <h2>В работе</h2>
+        <ul class="orders-list">
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Приготовлено" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Приготовлено" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Приготовлено" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Приготовлено" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Приготовлено" />
+          </li>
+        </ul>
       </div>
-    </main>
-  </body>
-</html>
+      <div class="wait-courier">
+        <h2>Ожидают курьера</h2>
+        <ul class="orders-list">
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Забрано курьером" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Забрано курьером" />
+          </li>
+          <li class="orders-item row row-cols-2">
+            <a href="order-data">Заказ №304</a>
+            <input class="button-small" value="Забрано курьером" />
+          </li>
+        </ul>
+      </div>
+    </div>
+{% endblock %}
