--- a/templates/manager/good-form.html
+++ b/templates/manager/good-form.html
@@ -1,86 +1,67 @@
-<!doctype html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+{% extends 'base_login.html' %}
 
-    <link rel="stylesheet" href="/templates/css/reset.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/templates/css/main.css" />
-    <link rel="stylesheet" href="/templates/css/header.css" />
-    <link rel="stylesheet" href="/templates/css/login.css" />
-    <link rel="stylesheet" href="/templates/css/manager.css" />
-    <title>goodTravel</title>
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header__logo">
-          <img src="/templates/img/layer1.svg" alt="logo" srcset="" />
-        </div>
-        <div class="header__empty"></div>
-        <nav class="header__nav">
-          <ul class="nav__ul">
+{% from 'admin/admin-header.html' import admin_logo %}
+
+{% block styles %}
+    <link rel="stylesheet" href=" {{ url_for('static', filename='css/login.css') }} "/>
+    <link rel="stylesheet" href=" {{ url_for('static', filename='css/manager.css') }} "/>
+{% endblock %}
+
+{% block logo %}
+    {{ admin_logo() }}
+{% endblock %}
+
+{% block nav %}
+    <nav class="header__nav">
+        <ul class="nav__ul">
             <li class="nav__li">
-              <a class="nav__a" active>Заказы</a>
+                <a href="/" class="nav__a">Заказы</a>
             </li>
             <li class="nav__li">
-              <a href="./goods.html" class="nav__a__active">Блюда</a>
+                <span class="nav__a__active">Блюда</span>
             </li>
             <li class="nav__li">
-              <a href="#" class="logout nav__a">Выйти</a>
+                <a href="#" class="logout nav__a">Выйти</a>
             </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="container">
-        <div class="main__form">
-          <h1>Создать блюдо</h1>
+        </ul>
+    </nav>
+{% endblock %}
 
-          <a href="#">Добавить возможные ингридиенты</a>
+{% block content %}
+    <div class="main__form">
+        <h1>Создать блюдо</h1>
 
-          <form method="POST" action="">
+        {% if edit %}
+            <a href="#">Добавить возможные ингридиенты</a>
+            <ul>
+                <li data-ingr-id="2">Лосось
+                    <button id="2" class="button delete">Удалить</button>
+                </li>
+            </ul>
+        {% endif %}
+
+        <form method="POST" action="">
             <div class="form-component">
-              <label for="title">Название</label>
-              <input type="text" id="title" name="title" value="" />
+                <label for="title">Название</label>
+                <input type="text" id="title" name="title" value=""/>
             </div>
 
             <div class="form-component">
-              <label for="image-url">Ссылка изображение</label>
-              <input type="text" id="image-url" name="image-url" value="" />
+                <label for="image-url">Ссылка изображение</label>
+                <input type="text" id="image-url" name="image-url" value=""/>
             </div>
 
             <div class="form-component">
-              <label for="description">Описание блюда</label>
-              <input type="text" id="description" name="description" value="" />
+                <label for="description">Описание блюда</label>
+                <input type="text" id="description" name="description" value=""/>
             </div>
 
             <div class="form-component">
-              <label for="price">Цена</label>
-              <input type="number" id="price" name="price" value="" />
+                <label for="price">Цена</label>
+                <input type="number" id="price" name="price" value=""/>
             </div>
 
             <button class="button" type="submit">Создать</button>
-          </form>
-        </div>
-      </div>
-    </main>
-  </body>
-</html>
+        </form>
+    </div>
+{% endblock %}
