--- a/templates/registrate.html
+++ b/templates/registrate.html
@@ -1,40 +1,20 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+{% extends 'base_login.html' %}
 
-    <link rel="stylesheet" href="/templates/css/reset.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/templates/css/main.css" />
-    <link rel="stylesheet" href="/templates/css/header.css" />
-    <link rel="stylesheet" href="/templates/css/login.css" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="header__logo">
-          <img src="/templates/img/logo.svg" alt="logo" srcset="" />
-        </div>
-      </div>
-    </header>
-    <main>
-      <div class="container">
+{% from 'admin/admin-header.html' import admin_nav, admin_logo %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+{% endblock %}
+
+{% block logo %}
+    {{ admin_logo() }}
+{% endblock %}
+
+{% block nav %}
+	{{ admin_nav() }}
+{% endblock %}
+
+{% block content %}
         <div class="main__form">
           <h1>Регистрация</h1>
           <form action="/login" method="post">
@@ -103,7 +83,4 @@
             </div>
           </form>
         </div>
-      </div>
-    </main>
-  </body>
-</html>
+{% endblock %}
