--- a/templates/admin/stuff-form.html
+++ b/templates/admin/stuff-form.html
@@ -21,6 +21,7 @@
                         name="lastname"
                         placeholder="Иванов"
                         id="lastname"
+                        value="{% if old_user.lastname %}{{ old_user.lastname }}{% endif %}"
                 />
             </div>
             <div class="form-component">
@@ -30,6 +31,7 @@
                         name="firstname"
                         placeholder="Иван"
                         id="firstname"
+                        value="{% if old_user.firstname %}{{ old_user.firstname }}{% endif %}"
                 />
             </div>
             <div class="form-component">
@@ -39,6 +41,7 @@
                         name="surname"
                         placeholder="Иванович"
                         id="surname"
+                        {% if old_user.surname %}{{ old_user.surname }}{% endif %}
                 />
             </div>
             <div class="form-component">
@@ -48,21 +51,30 @@
                         name="phone"
                         placeholder="+78005553535"
                         id="phone"
+                        value="{% if old_user.phone %}{% old_user.phone %}{% endif %}"
                 />
             </div>
             <div class="form-component">
                 <label for="login">Логин</label>
-                <input type="text" name="login" placeholder="Login" id="login"/>
+                <input
+                        type="text"
+                        name="login"
+                        placeholder="Login"
+                        id="login"
+                        value="{% if old_user.login %}{{ old_user.login }}{% endif %}"
+                />
             </div>
             <div class="form-component">
                 <label for="password">Пароль</label>
                 <input
-                        type="password"
+                        type="text"
                         name="password"
                         placeholder="....."
                         id="password"
+                        value="{% if old_user.password %}{{ password }}{% endif %}"
                 />
             </div>
+            {% if not old_user %}
             <div class="form-component">
                 <label for="password-confirm">Подтвердите</label>
                 <input
@@ -74,9 +86,14 @@
             </div>
 
             <div class="form-buttons">
-                <button type="submit">Зарегестрироваться</button>
-                <a class="button" target="" rel="noopener noreferrer">Войти</a>
+                <button type="submit">Создать работника</button>
             </div>
+            {% else %}
+                <div class="form-buttons">
+                    <button type="submit">Сохранить</button>
+                </div>
+            {% endif %}
+
         </form>
     </div>
 {% endblock %}
