--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -30,7 +30,7 @@
 {% block content %}
         <div class="orders">
           <h2>Необработанные заказы</h2>
-
+            {% for order in  %}
           <div class="order">
             <h3>Заказ №305</h3>
 
