--- a/templates/courier/index.html
+++ b/templates/courier/index.html
@@ -21,61 +21,47 @@
             <h2>Доставка в работе</h2>
             {% for order in activer_orders %}
                 <div class="order">
-                <h3>Заказ №{{ order.id }}</h3>
-                <div class="user-phone">
-                    <span class="info">Номер клиента:</span>
-                    <a href="tel:+78005553535">{{ order.users.phone_number }}</a>
-                </div>
-                <div class="order-info">
-                    <div class="from-address">
-                        <span class="info">Откуда:</span> Проспект Звёздной Пыли, 789,
-                        город Ноктюрн
+                    <h3>Заказ №{{ order.order.id }}</h3>
+                    <div class="user-phone">
+                        <span class="info">Номер клиента:</span>
+                        <a href="tel:+78005553535">{{ order.users.phone_number }}</a>
                     </div>
-                    <div class="to-address">
-                        <span class="info">Куда:</span> Улица Песчаных Дюн, 101, город
-                        Ноктюрн
+                    <div class="order-info">
+                        <div class="from-address">
+                            <span class="info">Откуда:</span> {{ order.order.delivery_from_address }}
+                        </div>
+                        <div class="to-address">
+                            <span class="info">Куда:</span> {{ order.order.delivery_to_address }}
+                        </div>
+                    </div>
+                    <div class="order-delivered">
+                        <button class="button">Доставлено</button>
                     </div>
                 </div>
             {% endfor %}
-            <div class="order-delivered">
-                <button class="button">Доставлено</button>
-            </div>
-            </div>
-            <div class="order">
-                <h3>Заказ № 304</h3>
-                <div class="order-info">
-                    <div class="from-address">
-                        <span class="info">Откуда:</span> Проспект Звёздной Пыли, 789,
-                        город Ноктюрн
-                    </div>
-                    <div class="to-address">
-                        <span class="info">Куда:</span> Улица Песчаных Дюн, 101, город
-                        Ноктюрн
-                    </div>
-                </div>
-                <div class="order-delivered">
-                    <button class="button">Доставлено</button>
-                </div>
-            </div>
         </div>
         <div class="inactive-orders">
             <h2>Ожидет курьера</h2>
-            <div class="order">
-                <h3>Заказ № 304</h3>
-                <div class="order-info">
-                    <div class="from-address">
-                        <span class="info">Откуда:</span> Проспект Звёздной Пыли, 789,
-                        город Ноктюрн
+            {% for order in orders %}
+                <div class="order">
+                    <h3>Заказ № {{ order.order.id }}</h3>
+                    <div class="order-info">
+                        <div class="user-phone">
+                            <span class="info">Номер клиента:</span>
+                            <a href="tel:+78005553535">{{ order.users.phone_number }}</a>
+                        </div>
+                        <div class="from-address">
+                            <span class="info">Откуда:</span> {{ order.order.delivery_from_address }}
+                        </div>
+                        <div class="to-address">
+                            <span class="info">Куда:</span> {{ order.order.delivery_to_address }}
+                        </div>
                     </div>
-                    <div class="to-address">
-                        <span class="info">Куда:</span> Улица Песчаных Дюн, 101, город
-                        Ноктюрн
+                    <div class="order-delivered">
+                        <button class="button">Взять в работу</button>
                     </div>
                 </div>
-                <div class="order-delivered">
-                    <button class="button">Взять в работу</button>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
