--- a/templates/manager/ingridients-form.html
+++ b/templates/manager/ingridients-form.html
@@ -29,14 +29,21 @@
 
 {% block content %}
     <div class="main__form">
-    <h1>Добавить ингридиенты</h1>
-    <button id="make-field" class="button">Добавить поле ввода</button>
-    <form method="POST">
-        <div class=".form-component">
-            <label for="title">Название ингридиента</label>
-            <input id="title" name="title" value="{% if ingridient %}{{ ingridient.title }}{% endif %}" placeholder="Лосось">
-        </div>
-    </form>
-    <button id="send" class="button">Создать</button>
+        <h1>Добавить ингридиенты</h1>
+        {% if not ingridient %}
+        <button id="make-field" class="button">Добавить поле ввода</button>
+        {% endif %}
+        <form method="POST">
+            <div class=".form-component">
+                <label for="title">Название ингридиента</label>
+                <input id="title" name="title" value="{% if ingridient %}{{ ingridient.title }}{% endif %}"
+                       placeholder="Лосось">
+            </div>
+        </form>
+        {% if ingridient %}
+            <button id="send" class="button">Создать</button>
+        {% else %}
+            <button id="send" class="button">Сохранить</button>
+        {% endif %}
     </div>
 {% endblock %}
